[package]
name = "apiserver-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
env_logger = "0.11"
kube = { version = "3.1.0", features = ["runtime"] }
k8s-openapi = { version = "0.27.1", features = ["v1_34"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
config = "0.15.22"
thiserror = "2.0.18"
futures = "0.3"
anyhow = "1.0"
log = "0.4"
actix-cors = "0.7"
dashmap = "6.1.0"
arc-swap = "1.7"
chrono = "0.4"

[[bin]]
name = "apiserver-cache"
path = "src/main.rs"
